k8s/qa/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-auction
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: reverse-auction
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: "10%"
      maxSurge: "100%"
  template:
    metadata:
      labels:
        app: reverse-auction
        run: reverse-auction
    spec:
      containers:
      - name: reverse-auction
        image: reverse-auction.azurecr.io/reverse-auction
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        # readinessProbe:
        #   httpGet:
        #     path: /status
        #     port: 3000
        #   initialDelaySeconds: 20
        #   timeoutSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /status
        #     port: 3000
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 10
        resources:
          requests:
            memory: "16Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: reverse-auction
  name: reverse-auction
spec:
  type: ClusterIP
  ports:
  - name: reverse-auction
    targetPort: 3000
    port: 3000
  selector:
    app: reverse-auction
